<resources>
    <string name="app_name">Bachelor Point</string>

    //live
<!--    <string name="database_name">BachelorPoint</string>-->
    //test
    <string name="database_name">BachelorPointTest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_home_bn">হোম</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_gallery_bn">গ্যালারি</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_slideshow_bn">স্লাইডশো</string>
    <string name="menu_member">Member</string>
    <string name="menu_member_bn">সদস্য</string>
    <string name="menu_rent">Rent &amp; Bill</string>
    <string name="menu_rent_bn">ভাড়া এবং বিল</string>
    <string name="menu_meal">Meal</string>
    <string name="menu_meal_bn">মিল</string>
    <string name="menu_add_meal">Add Meal</string>
    <string name="menu_add_meal_bn">মিল যোগ করুন</string>
    <string name="menu_expense">Expense</string>
    <string name="menu_expense_bn">বাজার খরচ</string>
    <string name="menu_add_expense">Add Expense</string>
    <string name="menu_add_expense_bn">বাজার খরচ যোগ করুন</string>
    <string name="menu_member_details">Member Details</string>
    <string name="menu_member_details_bn">সদস্য বিবরণ</string>
    <string name="menu_monthly_account">Monthly Accounts</string>
    <string name="menu_monthly_account_bn">মাসিক হিসাব</string>
    <string name="menu_sign_up">Sign Up Admin</string>
    <string name="menu_sign_in">Sign In</string>
    <string name="menu_add_rent">Add Rent &amp; Bill</string>
    <string name="menu_add_rent_bn">ভাড়া এবং বিল যোগ করুন</string>
    <string name="menu_add_member">Add New Member</string>
    <string name="menu_add_member_bn">নতুন সদস্য যোগ করুন</string>
    <string name="name_en">Name</string>
    <string name="name_bn">নাম</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="fab_for_add">Fab For Add</string>
    <string name="zero">0</string>
    <string name="date">Date</string>
    <string name="name_and_date">নাম ও তারিখ</string>
    <string name="total_bn">মোট</string>
    <string name="total_member">মোট মেম্বার</string>
    <string name="per_head_cost">জন প্রতি খরচ</string>
    <string name="per_head_rent">জন প্রতি আলাদা ভাড়া</string>
    <string name="total_taka_bn">মোট টাকা</string>
    <string name="taka_bn">টাকা</string>
    <string name="description_en">Description</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="jon">জন</string>
    <string name="meal_account">মিলের হিসাব</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="create_member">Create Member</string>
    <string name="create_new_bachelor_point">Create New Bachelor Point</string>
    <string name="sign_in">Sign In</string>
    <string name="day_dd_mm_yyyy">Day DD-MM-YYYY</string>
    <string name="month_yyyy">Month YYYY</string>
</resources>