<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_5dp"
    tools:context=".ui.home.HomeFragment">

    <EditText
        android:hint="@string/name_en"
        android:id="@+id/nameEt"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_5dp"
        android:background="@drawable/bg_et"
        android:padding="@dimen/dimen_10dp" />

    <EditText
        android:hint="@string/email"
        android:id="@+id/emailEt"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_5dp"
        android:background="@drawable/bg_et"
        android:padding="@dimen/dimen_10dp" />

    <EditText
        android:hint="@string/address"
        android:id="@+id/addressEt"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_5dp"
        android:background="@drawable/bg_et"
        android:padding="@dimen/dimen_10dp" />

    <EditText
        android:hint="@string/phone"
        android:id="@+id/phoneEt"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_5dp"
        android:background="@drawable/bg_et"
        android:padding="@dimen/dimen_10dp" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_gravity="center"
        android:text="@string/save"
        android:background="@drawable/bg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>