<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dateTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="@dimen/dimen_3dp"
                android:paddingTop="@dimen/dimen_3dp"
                android:paddingEnd="@dimen/dimen_3dp"
                android:text="@string/date"
                android:textSize="@dimen/dimen_18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="@dimen/dimen_3dp"
                android:paddingEnd="@dimen/dimen_3dp"
                android:paddingBottom="@dimen/dimen_3dp"
                android:text="@string/name_en"
                android:textSize="@dimen/dimen_18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/amountTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="@dimen/dimen_3dp"
            android:text="@string/zero"
            android:textSize="@dimen/dimen_18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/arrowIv"
            android:layout_width="@dimen/dimen_30dp"
            android:layout_height="@dimen/dimen_30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_arrow_forward_ios_24" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/purple_200" />
</LinearLayout>