<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_1"
    android:gravity="center"
    android:padding="@dimen/dimen_10dp"
    android:orientation="vertical"
    tools:context=".ui.signInSignUp.SignUpFragment">

    <LinearLayout
        android:id="@+id/logoLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/home"
            app:tint="@color/color_sp_popup" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/man_2"
            app:tint="@color/color_sp_popup" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoLl"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:gravity="center"
        android:padding="@dimen/dimen_10dp"
        android:text="New Bachelor Point"
        android:textColor="@color/color_sp_popup"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_et"
        android:hint="@string/name_en"
        android:padding="@dimen/dimen_10dp" />

    <EditText
        android:layout_below="@+id/nameEt"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:background="@drawable/bg_et"
        android:padding="@dimen/dimen_10dp"
        android:id="@+id/emailEt"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <EditText
        android:layout_below="@+id/emailEt"
        android:id="@+id/passwordEt"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:background="@drawable/bg_et"
        android:inputType="textPassword"
        android:text=""
        android:padding="@dimen/dimen_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/addressEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEt"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:background="@drawable/bg_et"
        android:hint="Address"
        android:inputType="text"
        android:padding="@dimen/dimen_10dp"
        android:text="" />

    <EditText
        android:id="@+id/phoneEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addressEt"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:background="@drawable/bg_et"
        android:hint="Phone Number"
        android:inputType="phone"
        android:padding="@dimen/dimen_10dp"
        android:text="" />

    <Button
        android:layout_below="@+id/phoneEt"
        android:id="@+id/signUpBtn"
        android:layout_centerHorizontal="true"
        android:text="Sign Up"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progressBar"
        style="@style/SpinKitView.Large.ThreeBounce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneEt"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        app:SpinKit_Color="@color/color_sp_popup" />


</RelativeLayout>